[metadata]
name = pipeline_danger
version = 1.0
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Pipeline defects danger calculation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/pipeline.danger
project_urls =
    Bug Tracker = https://github.com/vb64/pipeline.danger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = pipeline_danger
python_requires = >=3.6
include_package_data=True
