[metadata]
name = pipeline_integrity
version = 1.5
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Pipeline integrity calculation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/pipeline.integrity
project_urls =
    Bug Tracker = https://github.com/vb64/pipeline.integrity/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = pipeline_integrity
include_package_data=True
install_requires = 
  py23
  pipeline-material
